fix: parse commands properly, handle input-output overflow, scroll when clearing

--- a/public/styles.css
+++ b/public/styles.css
@@ -26,13 +26,25 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-size: 14px;
+  text-align: justify;
 }
 
 .welcome {
   display: flex;
+  justify-content: center;
   gap: 16px;
-  font-size: 16px;
+  font-size: 14px;
   margin-top: 42px;
+  margin-bottom: 16px;
+  padding-bottom: 8px;
+}
+
+.line {
+  width: 50%;
+  margin-left: 25%;
+  border-bottom: 1px dotted;
+  border-bottom-width: 50%;
+  border-bottom-color: var(--foreground);
 }
 
 .about {
@@ -88,7 +100,11 @@ body {
     flex-direction: column;
     justify-content: center;
     margin: 4px;
-    font-size: 14px;
+  }
+
+  .line {
+    width: 80%;
+    margin-left: 10%;
   }
 
   .about {
@@ -105,6 +121,21 @@ body {
   background: var(--background);
   color: var(--foreground);
   outline: none; border: 0;
+}
+
+.output {
+  width: 60%;
+  padding-left: 0.5rem;
+}
+
+@media only screen and (max-width: 720px) {
+  .prompt {
+    width: 40%;
+  }
+
+  .output {
+    width: 90%;
+  }
 }
 
 .active {
